[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpletuner"
dynamic = ["version"]
description = "Stable Diffusion 2.x and XL tuner."
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "diffusers>=0.30.0,<0.40.0",
    "transformers>=4.40.0,<5.0.0",
    "accelerate>=0.25.0,<2.0.0",
    "safetensors>=0.4.0,<1.0.0",
    "numpy>=1.24.0,<3.0.0",
    "pillow>=10.0.0,<12.0.0",
    "requests>=2.30.0,<3.0.0",
    "datasets>=2.15.0,<5.0.0",
    "scipy>=1.10.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "tokenizers>=0.15.0,<1.0.0",
    "huggingface-hub>=0.20.0,<1.0.0",
    "tensorboard>=2.15.0,<3.0.0",
    "wandb>=0.15.0,<1.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "compel>=2.0.0,<3.0.0",
    "peft>=0.7.0,<1.0.0",
]
authors = [
    {name = "bghira"},
]
maintainers = [
    {name = "bghira"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = [
    "stable-diffusion",
    "machine-learning",
    "deep-learning",
    "pytorch",
    "cuda",
    "rocm",
    "diffusion-models",
    "ai",
    "image-generation"
]
requires-python = ">=3.11,<3.14"

[project.optional-dependencies]
# Platform-specific extras (for manual override)
cuda = [
    "triton>=3.0.0,<4.0.0",
    "bitsandbytes>=0.40.0,<1.0.0",
    "deepspeed>=0.15.0,<1.0.0",
    "nvidia-ml-py>=11.0.0,<13.0.0",
]
rocm = [
    # ROCm packages are platform specific
]
apple = [
    # Apple Silicon optimizations
]
cpu = [
    # CPU-only packages
]

# Feature extras
jxl = [
    "pillow-jxl-plugin>=1.3.1",
]
audio = [
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
]

# Development extras
dev = [
    "black>=23.0.0,<25.0.0",
    "isort>=5.10.0,<6.0.0",
    "flake8>=6.0.0,<8.0.0",
]

# Testing extras  
test = [
    "pytest>=7.0.0,<9.0.0",
    "coverage>=7.0.0,<8.0.0",
]

# All extras combined
all = [
    "pillow-jxl-plugin>=1.3.0,<2.0.0",
]

[project.scripts]
simpletuner = "simpletuner.cli:main"
simpletuner-train = "simpletuner.train:main"
simpletuner-configure = "simpletuner.configure:main"
simpletuner-inference = "simpletuner.inference:main"

[project.urls]
Homepage = "https://github.com/bghira/SimpleTuner"
Repository = "https://github.com/bghira/SimpleTuner.git"
Issues = "https://github.com/bghira/SimpleTuner/issues"
Documentation = "https://github.com/bghira/SimpleTuner/blob/main/README.md"
Changelog = "https://github.com/bghira/SimpleTuner/releases"

# Setuptools configuration
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "simpletuner.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["simpletuner*"]
exclude = ["tests*", "scripts*", "install*", "config*", "documentation*"]

[tool.setuptools.package-data]
simpletuner = [
    "examples/**/*",
    "py.typed",
]

# Development tools configuration
[tool.black]
line-length = 125
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 125
known_first_party = ["simpletuner"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready for strict typing
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "transformers.*",
    "diffusers.*",
    "accelerate.*",
    "wandb.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["simpletuner"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
